# solid-principles

./: pyproject.toml  pyvenv.cfg
src/: example.py
src/solid_report/: __init__.py
src/solid_report.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/solid_report/formatters/: __init__.py
src/solid_report/interfaces/: __init__.py
src/solid_report/models/: __init__.py
src/solid_report/printers/: __init__.py
src/solid_report/storage/: __init__.py
